fix alignment

--- a/docs/_sass/uno.scss
+++ b/docs/_sass/uno.scss
@@ -1100,7 +1100,7 @@ pre {
 	z-index: 800;
 	width: 75%;
 	max-width: 1200px;
-	margin-left: 25%; }
+	margin-left: 27%; }
 
 .content-wrapper__inner {
 	margin: 0 10%;
@@ -1249,7 +1249,7 @@ hr {
 	height: 100%; }
 
 .no-js .panel-main {
-	width: 25%;
+	width: 27%;
 	max-width: 530px; }
 
 .panel-main__inner {
